Correct spacing values
Remove gap on .header, change gap on ul, .right, and .left

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,7 +14,6 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
   padding: 8px;
-  gap: 16px;
   justify-content: space-between;
 }
 
@@ -50,11 +49,13 @@ a {
 ul {
   list-style-type: none;
   display: flex;
-  gap: 8px;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
 
 .right , .left{
   display: flex;
-  gap: 8px;
+  gap: 16px;
   align-items: center;
 }
